--- a/src/app/modules/user/components/signup/signup.component.html
+++ b/src/app/modules/user/components/signup/signup.component.html
@@ -6,26 +6,29 @@
                     class="img-fluid" alt="Sample image">
             </div>
             <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-                <form>
+                <form [formGroup]="signupForm">
                     <h1 class="mb-4">Sign Up</h1>
 
-                    <!-- Email input -->
                     <div class="form-outline mb-4">
                         <input type="email" id="form3Example3" class="form-control form-control-lg"
-                            placeholder="Enter a valid email address" [(ngModel)]="email" name="email" />
+                            placeholder="Enter a valid email address"  formControlName="email" />
                         <label class="form-label" for="form3Example3">Email address</label>
                     </div>
 
-                    <!-- Password input -->
                     <div class="form-outline mb-3">
                         <input type="password" id="form3Example4" class="form-control form-control-lg"
-                            placeholder="Enter password" [(ngModel)]="password" name="password" />
+                            placeholder="Enter password"  formControlName="password_digest" />
                         <label class="form-label" for="form3Example4">Password</label>
+                    </div>
+                    <div class="form-outline mb-3">
+                        <input type="password" id="form3Example4" class="form-control form-control-lg"
+                            placeholder="Confirm password"   />
+                        <label class="form-label" for="form3Example4">Confirm Password</label>
                     </div>
 
                     <div class="text-center text-lg-start mt-4 pt-2">
                         <button type="button" class="btn btn-primary btn-lg"
-                            style="padding-left: 2.5rem; padding-right: 2.5rem;">Sign up</button>
+                            style="padding-left: 2.5rem; padding-right: 2.5rem;" (click)="signUp()">Sign up</button>
                         <p class="small fw-bold mt-2 pt-1 mb-0">Already have an account? <a routerLink="/signin"
                             routerLinkActive="active"
                                 class="link-danger">Sign in</a></p>
